2013-10-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/strcpy.S (strcpy): Add word load/store
	to provide a boost for large inputs with word alignment.
	* sysdeps/powerpc/powerpc64/stpcpy.S (__stpcpy): Rewrite
	implementation based on optimized PPC64 strcpy.
	* sysdeps/powerpc/powerpc64/power7/strcpy.S: New file: optimized
	strcpy for PPC64/POWER7 based on both doubleword and word load/store.
	* sysdeps/powerpc/powerpc64/power7/stpcpy.S: New file: optimized
	stpcpy for PPC64/POWER7 based on PPC64/POWER7 strcpy.

2013-10-25  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #16072]
	* sysdeps/posix/getaddrinfo.c (gethosts): Allocate tmpbuf on
	heap for large requests.

2013-09-02  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14155]
	* sysdeps/ieee754/flt-32/e_jnf.c (__ieee754_jnf): Use double for
	intermediate calculations in recurrence.
	(__ieee754_ynf): Likewise.
	* math/libm-test.inc (jn_test_data): Do not allow spurious
	underflow exception.  Add more tests.
	(yn_test_data): Add more tests.
	* sysdeps/i386/fpu/libm-test-ulps: Update.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

2013-08-29  Thomas Schwinge  <thomas@codesourcery.com>

	[BZ #15522] strtod ("nan(N)") returning a sNaN in some cases

	* stdlib/strtof_l.c (SET_MANTISSA): Rewrite.
	* stdlib/strtod_l.c (SET_MANTISSA): Likewise.
	* sysdeps/ieee754/ldbl-64-128/strtold_l.c (SET_MANTISSA):
	Likewise.
	* sysdeps/ieee754/ldbl-96/strtold_l.c (SET_MANTISSA): Likewise.
	* sysdeps/ieee754/ldbl-128/strtold_l.c (SET_MANTISSA): Likewise.
	* sysdeps/ieee754/ldbl-128ibm/strtold_l.c (SET_MANTISSA):
	Likewise.
	* sysdeps/ieee754/ldbl-128ibm/ieee754.h
	(ibm_extended_long_double): Add ieee_nan member.
	* stdlib/tst-strtod6.c (test): New function, renamed from do_test.
	(do_test): New function.

	* math/basic-test.c (TEST_CONVERT): New macro, renamed from
	TEST_TRUNC.
	(convert_dfsf_test, convert_tfsf_test, convert_tfdf_test): New